--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,12 @@
     }
   </script>
 
+  <script type="text/javascript">
+    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+    return new bootstrap.Tooltip(tooltipTriggerEl)
+})
+  </script>
+
 </body>
 </html>
